# KmaNghia18-cpp-system-monitor

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
include/monitors/: CPUMonitor.h  DiskMonitor.h  NetworkMonitor.h  RAMMonitor.h
include/ui/: CPUWidget.h  DiskWidget.h  MainWindow.h  NetworkWidget.h  RAMWidget.h
include/utils/: SystemUtils.h
src/: main.cpp
src/monitors/: CPUMonitor.cpp  DiskMonitor.cpp  NetworkMonitor.cpp  RAMMonitor.cpp
src/ui/: CPUWidget.cpp  DiskWidget.cpp  MainWindow.cpp  NetworkWidget.cpp  RAMWidget.cpp
src/utils/: SystemUtils.cpp
